[gd_scene load_steps=5 format=3 uid="uid://cejp7bpbfmkw"]

[ext_resource type="Script" path="res://misc/hud/utility_menu.gd" id="1_db426"]
[ext_resource type="Material" uid="uid://dcq7n5qyt3hj0" path="res://materials/immaterial.tres" id="1_jr21q"]
[ext_resource type="PackedScene" uid="uid://dleye7m8gjxs0" path="res://misc/hud/control_display_button.tscn" id="2_lco6t"]
[ext_resource type="Theme" uid="uid://cxq4wi2s4byf1" path="res://textures/hud/custom_theme_alt.tres" id="3_v0p8v"]

[node name="UtilityMenu" type="Control"]
material = ExtResource("1_jr21q")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_v0p8v")
script = ExtResource("1_db426")

[node name="MenuButton" parent="." instance=ExtResource("2_lco6t")]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 0
offset_left = -65.0
offset_right = -21.0
offset_bottom = 44.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource("3_v0p8v")
text = "‚Üê"
icon_alignment = 2
input_action_name = "menu_right"

[node name="Info" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
use_parent_material = true
layout_mode = 0
offset_top = 45.0
offset_right = 72.0
offset_bottom = 197.0
theme_override_constants/separation = -1

[node name="Party" type="Button" parent="Info"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
focus_neighbor_top = NodePath("../Inventory")
focus_neighbor_bottom = NodePath("../Rest")
focus_next = NodePath("../Rest")
focus_previous = NodePath("../Inventory")
text = "Party"

[node name="Rest" type="Button" parent="Info"]
use_parent_material = true
layout_mode = 2
focus_neighbor_top = NodePath("../Party")
focus_neighbor_bottom = NodePath("../Map")
focus_next = NodePath("../Map")
focus_previous = NodePath("../Party")
text = "Rest"

[node name="Map" type="Button" parent="Info"]
use_parent_material = true
layout_mode = 2
focus_neighbor_top = NodePath("../Rest")
focus_neighbor_bottom = NodePath("../Inventory")
focus_next = NodePath("../Inventory")
focus_previous = NodePath("../Rest")
text = "Map"

[node name="Inventory" type="Button" parent="Info"]
use_parent_material = true
layout_mode = 2
focus_neighbor_top = NodePath("../Map")
focus_neighbor_bottom = NodePath("../Party")
focus_next = NodePath("../Party")
focus_previous = NodePath("../Map")
text = "Inventory"

[connection signal="pressed" from="MenuButton" to="." method="toggle_menu"]
